Nutrition Orders Sync

--- a/app/src/main/res/layout/success_dialog.xml
+++ b/app/src/main/res/layout/success_dialog.xml
@@ -28,6 +28,7 @@
                 app:tint="@color/dim_green" />
 
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_middle"
