--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -6,31 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".auth.GetStartedActivity">
 
-
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/start"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintHeight_percent="0.6"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:weightSum="2"
+        android:orientation="vertical">
 
-    <ScrollView
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/_15dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintHeight_percent="0.4">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            android:src="@drawable/start" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/_15dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -72,12 +68,13 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
+                android:paddingLeft="@dimen/_25sp"
+                android:paddingRight="@dimen/_25sp"
                 android:text="@string/log"
                 android:textSize="20sp"
                 app:cornerRadius="@dimen/_5dp" />
         </LinearLayout>
-    </ScrollView>
-
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/button"
