--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/search"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight="1"
                 app:iconifiedByDefault="false"
                 app:queryBackground="@android:color/transparent"
@@ -31,14 +31,13 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Spinner
                     android:id="@+id/mySpinner"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:entries="@array/sort"
                     android:spinnerMode="dialog" />
 
