--- a/app/src/main/res/layout/fragment_process_order.xml
+++ b/app/src/main/res/layout/fragment_process_order.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/padding_10"
-            android:padding="@dimen/padding_5" />
+            android:layout_marginEnd="@dimen/_10dp" />
 
         <TextView
             android:layout_width="match_parent"
