--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -36,14 +36,13 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_15dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Spinner
                         android:id="@+id/mySpinner"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
                         android:entries="@array/sort"
                         android:spinnerMode="dialog" />
 
