--- a/app/src/main/res/menu/dashboard_menu.xml
+++ b/app/src/main/res/menu/dashboard_menu.xml
@@ -17,6 +17,6 @@
     <item
         android:id="@+id/menu_profile"
         android:icon="@drawable/mask"
-        android:title="@string/menu_guide"
+        android:title="@string/app_profile"
         app:showAsAction="ifRoom" />
 </menu>
